<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.9">
  <DUT Name="E_TestSuiteRunState" Id="{d610d037-ee39-449d-9dc9-2e1f8303e75d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_TestSuiteRunState :
(
    IDLE := 0,
    RUNNING := 1,
    FINISHED := 2
) USINT;
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>